# rust-web-template

./: README.md  setup.sh
.template/: .gitignore  Cargo.toml  README.md
.template/js/: package.json
