[package]
name = "%PROJECT-DESCRIPTION%"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
serde = { version = "1.0.120", features =  ["derive"] }
serde_json = "1.0.61"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
warp = "0.3"
warp-embed = { git = "https://github.com/post-rex/warp-embed" }
rust-embed = "5.9"
